fix the height of textarea in contrast mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,8 @@
 .contrast {
     /*modify the style of the contrast mode panel*/
 }
+
+.statusBar{
+
+}
+
